# spire-lens-mcp

./: AUTHORS.md  McpMod.Actions.cs  McpMod.Catalog.cs  McpMod.DevActions.cs  McpMod.Screenshot.cs  McpMod.StateBuilder.cs  McpMod.cs  README.md
mcp/: README.md  pyproject.toml  server.py  test_auth.py
